# muro_lab_summer

./: README.md
KalmanFilter/: Kalmanfilter.cpp  PoseWithName.h
Quadcopter_android/: build.gradle
SLAM/: amclgoalset.cpp  camera-data-subscriber.cpp  circle-publisher.cpp  circle_in_place.launch  kinect_data_condensor_republisher.cpp  mimic.cpp  readmap.cpp  spawner.cpp  spinordrive.cpp  titianbot.launch  turtlesim_mimic.cpp
coop_localization/: CMakeLists.txt~
deployment/turtlebot_deployment/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
deployment/turtlebot_deployment/cfg/: pathFollowing.cfg
deployment/turtlebot_deployment/include/: VoronoiDiagramGenerator.h  agent.h
deployment/turtlebot_deployment/launch/: centroid.launch  centroidK.launch  coverage_control_backbone.launch  cyclic.launch  deploy_robot.launch  deploy_robot.launch~  deploy_robot_dummy.launch  deploy_robot_nav.launch  ekflauncher.launch  ekflauncher.launch~  joystick_teleop_mstrcmptr.launch  map_server.launch  map_server.launch~  rosUnits.launch
deployment/turtlebot_deployment/maps/: lab_map.yaml  lab_maze.pgm  lab_maze.yaml  lab_workspace.pgm  lab_workspace.yaml  lab_workspace.yaml.edited  lab_workspace.yaml~
deployment/turtlebot_deployment/src/: Kalmanfilter.cpp  Kalmanfilter.cpp~  PathFollowing.cpp  PoseWithName.h  VoronoiDiagramGenerator.cpp  agent.cpp  agent.cpp.edited  agent.cpp~  centroidKeyboard.cpp  cyclic_pursuit.cpp  ekf.cpp  ekf.cpp~  formation.cpp  goto.cpp  goto.cpp~  inter_robot_communication.cpp  inter_robot_communication_ekf.cpp  movingCentroid.cpp  rosUnitsMove.cpp  simple_deployment.cpp  simple_deployment.cpp~  simple_deployment_dummy.cpp  simple_deployment_old.cpp  stableEKF
deployment/turtlebot_move_to_goal/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
deployment/turtlebot_move_to_goal/src/: first_turn_then_move.cpp~  main.cpp
localization-mounted-camera/turtlebot_camera_localization/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml
localization-mounted-camera/turtlebot_camera_localization/launch/: .uvcCameraLaunch.launch.swo  camera_1.launch  camera_1.launch~  camera_2.launch  camera_2.launch~  dual_camera_demo.launch  dual_camera_demo.launch~  frames.gv  localization_demo.launch  localization_demo.launch~  localization_demo_multiple.launch  localization_with_map.launch  uvcCameraLaunch.launch  uvcCameraLaunch.launch~  uvcCameraLaunch_1.launch  uvcCameraLaunch_1.launch~  uvcCameraLaunch_2.launch  uvcCameraLaunch_2.launch~
localization-mounted-camera/turtlebot_camera_localization/maps/: lab_workspace.pgm  lab_workspace.yaml
localization-mounted-camera/turtlebot_camera_localization/src/: main.cpp  main.cpp~  main_1.cpp  main_1.cpp~  main_2.cpp  main_2.cpp~
quadcopter/test_pkg/: package.xml  (+3 more)
(+189 files in other folders)
