<?xml version="1.0"?>
<package>
  <name>turtlebot_move_to_goal</name>
  <version>0.0.0</version>
  <description>The turtlebot_move_to_goal package</description>

  <maintainer email="kliu@gmail.com">kliu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
